Fixed various CSS layout issues

--- a/packages/tme-demo-ui/src/webui/src/components/ConfigViewer/index.css
+++ b/packages/tme-demo-ui/src/webui/src/components/ConfigViewer/index.css
@@ -1,6 +1,9 @@
+.config-viewer__title-text {
+  flex: 1 1 auto;
+  overflow: hidden;
+}
+
 .config-viewer__loading-dots {
-  display: inline-block;
-  float: right;
 }
 
 .config-viewer__panel {
