--- a/packages/tme-demo-ui/src/webui/src/components/NsoWrapper/index.css
+++ b/packages/tme-demo-ui/src/webui/src/components/NsoWrapper/index.css
@@ -113,6 +113,7 @@
 }
 
 .nso-header__cisco-logo {
+  display: block;
   margin-left: 6px;
   margin-right: 2rem;
   width: 60px;
