--- a/packages/tme-demo-ui/src/webui/src/index.css
+++ b/packages/tme-demo-ui/src/webui/src/index.css
@@ -66,6 +66,7 @@ table.tooltip > tbody > tr > td {
   background: rgba(255, 255, 255, 0.8);
   height: 100%;
   min-height: 155px;
+  overflow: hidden;
   pointer-events: none;
   position: absolute;
   width: 100%;
